chenged name and h2

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Using OpenLayers with Webpack</title>
+    <title>MotoMaps</title>
     <link rel="stylesheet" href="https://openlayers.org/en/latest/css/ol.css" type="text/css">
     <style>
+		.arial { font-family:Arial; }
       html, body {
         margin: 0;
         height: 100%;
@@ -18,6 +19,7 @@
     </style>
   </head>
   <body>
+	<h2 class="arial">MotoMaps</h2>
     <div id="map"></div>
     <script src="./bundle.js"></script>
   </body>
